--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
+  <!-- Bootstrap 4.6x -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
@@ -20,30 +24,40 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
+  <!-- social media buttons -->
+  <link rel="stylesheet" href="./css/all.css">
+
 </head>
 
 <body>
   <div class="container">
+    <img src="../FMC-huddle-landing-page/images/logo.svg" alt="Huddle logo" class="logo">
+    <img src="../FMC-huddle-landing-page/images/illustration-mockups.svg"
+      alt="illustration of mockups for both desktop and mobile" id=mockups>
     <section>
-      <h1>Build The Community Your Fans Will Love</h1>
+      <h1>Build The Community <br>Your Fans Will Love</h1>
 
-      <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+      <p class="info">Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
         Create connections with your users as you engage in genuine discussion.</p>
 
-      <button type="button" name="button">Register</button>
+      <button type="button" class="btn btn-light rounded-pill" id="bootstrap-override">Register</button>
     </section>
 
-    <section class="social-media">
-    </section>
-
-    <section>
-      <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://github.com/Sam-a-lot/FMC-huddle-landing-page">SK</a>.
-      </p>
-    </section>
-
+    <div class="social-media">
+      <i class="fab fa-facebook-f" id="fb"></i>
+      <i class="fab fa-twitter" id="twitter"></i>
+      <i class="fab fa-instagram" id="insta"></i>
+    </div>
   </div>
 </body>
+
+
+<footer>
+  <p class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/Sam-a-lot/FMC-huddle-landing-page">SK</a>.
+  </p>
+
+</footer>
 
 </html>
